# unalone

./: .gitignore  app.py  pyproject.toml  requirements.txt  test.py
newvenv/: pyvenv.cfg
src/package_unalone/: __init__.py  routes.py
test/: unit.py
