[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "package_unalone"
version = "0.0.1"
authors = [
  { name="Jide Olaniyan", email="jidd32@gmail.com" },
]
description = "A flask matchmaker service"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"